--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.3.0",
+    "@types/date-and-time": "^0.13.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "date-and-time": "^2.4.2",
     "express": "^4.18.2",
     "graphql": "15.3.0",
+    "graphql-tools": "^8.3.15",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typescript": "^4.9.4"
